--- a/Prj_IdentifyNewBikes/pom.xml
+++ b/Prj_IdentifyNewBikes/pom.xml
@@ -44,7 +44,7 @@
 		<version>2.22.1</version>
 			<configuration>
 				<suiteXmlFiles>
-					<suiteXmlFile>C:\Users\ANMOL\eclipse-workspace\Prj_IdentifyNewBikes\src\test\resources\runner\testng.xml</suiteXmlFile>
+					<suiteXmlFile>C:\Users\Ajay Joy\eclipse-workspace\Prj_IdentifyNewBikes\src\test\resources\runner\testng.xml</suiteXmlFile>
 				</suiteXmlFiles>
 			</configuration>
 	</plugin>
